--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "tslint-react": "^3.6.0",
     "typescript": "^3.3.1",
     "wsrun": "^3.6.2"
+  },
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
