--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "is-hotkey": "^0.1.4",
+    "lodash.throttle": "^4.1.1",
     "next": "8.0.0-canary.18",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
     "@types/is-hotkey": "^0.1.1",
+    "@types/lodash.throttle": "^4.1.4",
     "@types/next": "^7.0.5",
     "@types/react": "^16.7.11",
     "@types/react-dom": "^16.0.11",
