--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,7 +16,7 @@
     "immutable": "^3.8.1",
     "is-hotkey": "^0.1.4",
     "lodash.throttle": "^4.1.1",
-    "next": "8.0.0-canary.18",
+    "next": "^8.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-art": "^16.8.0",
