--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "tsc": "tsc",
     "build": "wsrun --exclude-missing build",
     "test": "run-s lint tsc build",
-    "start": "wsrun start"
+    "start": "wsrun --exclude-missing start"
   },
   "devDependencies": {
     "babel-plugin-module-resolver": "^3.1.3",
