--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,7 @@
     "analyze:browser": "BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "@app/shared": "1.0.0",
     "gravatar": "^1.8.0",
     "immutable": "^3.8.1",
     "is-hotkey": "^0.1.4",
