--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,6 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-      - run: sudo npm i -g yarn && yarn
+      - run: sudo npm i -g yarn
+      - run: yarn
       - run: yarn test
