--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@app/state": "1.0.0",
     "@app/themes": "1.0.0",
+    "@app/validators": "1.0.0",
     "immer": "^2.0.0",
     "gravatar": "^1.8.0",
     "immutable": "^3.8.1",
@@ -26,8 +27,7 @@
     "react-intl": "^2.7.2",
     "react-native-web": "^0.10.0",
     "slate": "^0.44.10",
-    "slate-react": "^0.21.16",
-    "validator": "^10.11.0"
+    "slate-react": "^0.21.16"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
@@ -42,7 +42,6 @@
     "@types/slate": "^0.43.9",
     "@types/slate-react": "^0.20.3",
     "@types/styled-jsx": "^2.2.7",
-    "@types/validator": "^10.9.0",
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-typescript": "^1.1.1",
     "babel-plugin-module-resolver": "^3.1.3",
