Remove DeepReadonly, we don't need it. Improve createTaskList.

--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@app/state": "1.0.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
