--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.8.4",
-    "@types/react-native": "^0.57.38"
+    "@types/react-native": "^0.57.38",
+    "@types/lodash.throttle": "^4.1.4"
   }
 }
