--- a/packages/state/package.json
+++ b/packages/state/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@app/hooks": "1.0.0",
     "immer": "^2.0.0",
     "lodash.throttle": "^4.1.1",
     "react": "^16.8.2",
