Move universal components to own package

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,6 +16,7 @@
     "@app/themes": "1.0.0",
     "@app/validators": "1.0.0",
     "@app/hooks": "1.0.0",
+    "@app/components": "1.0.0",
     "immer": "^2.0.0",
     "gravatar": "^1.8.0",
     "immutable": "^3.8.1",
