Move blog to components, title to title case

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,11 @@
 {
   "name": "@app/components",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "title": "^3.4.1"
+  },
+  "devDependencies": {
+    "@types/title": "^1.0.5"
+  }
 }
