--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@app/hooks",
   "version": "1.0.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "io-ts": "^1.8.3"
+  }
 }
