--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,15 +12,18 @@
     "analyze:browser": "BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "@app/components": "1.0.0",
+    "@app/hooks": "1.0.0",
+    "@app/clientstate": "1.0.0",
     "@app/state": "1.0.0",
     "@app/themes": "1.0.0",
     "@app/validators": "1.0.0",
-    "@app/hooks": "1.0.0",
-    "@app/components": "1.0.0",
-    "immer": "^2.0.0",
     "gravatar": "^1.8.0",
+    "idb": "^4.0.0",
+    "immer": "^2.0.0",
     "immutable": "^3.8.1",
     "is-hotkey": "^0.1.4",
+    "lodash.throttle": "^4.1.1",
     "next": "^8.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
@@ -28,9 +31,8 @@
     "react-dom": "^16.8.0",
     "react-intl": "^2.7.2",
     "react-native-web": "^0.11.2",
-    "slate": "^0.44.10",
-    "slate-react": "^0.21.16",
-    "lodash.throttle": "^4.1.1"
+    "slate": "^0.45.0",
+    "slate-react": "^0.21.16"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
